[package]
name = "Rust-Learn"
version = "0.1.0"
authors = ["choigunwoo <gunwoo8873@outlook.kr"]
edition = "2021"

[dependencies]
rand = "~ 0.8.*"

[[bin]]
name = "variable"
path = "src/bin/variables.rs"

[[bin]]
name = "datatype"
path = "src/bin/datatype.rs"

[[bin]]
name = "operator"
path = "src/bin/operator.rs"

[[bin]]
name = "function"
path = "src/bin/function.rs"

[[bin]]
name = "branches"
path = "src/bin/branches.rs"

[[bin]]
name = "thread"
path = "src/bin/thread.rs"