[package]
name = "Rust-Learn"
version = "0.1.0"
authors = ["choigunwoo <gunwoo8873@outlook.kr"]
edition = "2021"

[dependencies]
rand = {version = "~ 0.8.*"}

[[bin]]
name = "datatype"
path = "src/bin/1_datatype.rs"

[[bin]]
name = "operator"
path = "src/bin/2_operator.rs"

[[bin]]
name = "function"
path = "src/bin/3_function.rs"

[[bin]]
name = "branches"
path = "src/bin/4_branches.rs"

[[bin]]
name = "ownership"
path = "src/bin/5_ownership.rs"

[[bin]]
name = "variable"
path = "src/bin/6_variables.rs"

[[bin]]
name = "thread"
path = "src/bin/7_thread.rs"

[[bin]]
name = "thread"
path = "src/bin/8_method.rs"